fixed bug with hibernate and servlets, currently getting TOO_MANY_REDIRECTS error after login successful

--- a/project-1/src/main/webapp/manager-home.html
+++ b/project-1/src/main/webapp/manager-home.html
@@ -17,16 +17,20 @@
         <h1>Select an option from below.</h1>
     </header>
     <section id="option-container">
-        <div id="option">
+        <div id="choice">
             <i class="fas fa-file-invoice-dollar"></i> <a href="">Submit a
 				Reimbursement Request</a>
         </div>
-        <div id="option">
+        <div id="choice">
             <i class="fas fa-clipboard-list"></i> <a href="">View Past
 				Requests</a>
         </div>
-        <div id="option">
+        <div id="choice">
             <i class="fas fa-search-dollar"></i> <a href="">View Pending
+				Requests</a>
+        </div>
+        <div id="choice">
+            <i class="fas fa-user-tie"></i> <a href="">Authorize
 				Requests</a>
         </div>
     </section>
