--- a/project-1/src/main/webapp/index.html
+++ b/project-1/src/main/webapp/index.html
@@ -23,7 +23,7 @@
             <br>
             <input id="password" type="password" name="password" placeholder="Enter your password...">
             <br>
-            <input id="post-req" class="button" type="submit" value="Log In!">
+            <input id="post-req" class="button" type="submit" value="Sign In!">
             <script src="js/login.js"></script>
         </form>
     </section>
