--- a/project-1/src/main/webapp/index.html
+++ b/project-1/src/main/webapp/index.html
@@ -2,31 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReimburseMe! || Your Expense Reimbursement System || Sign In
-    </title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ReimburseMe! || Your Expense Reimbursement System || Sign
+	In</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link
+	href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 
 <body>
-    <section id="main-section">
-        <header id="head-container">
-            <h1>Welcome to ReimburseMe!</h1>
-            <h1>Please Sign In</h1>
-        </header>
-        <!--this will be a POST method request-->
-        <form id="login-form" action="/project-1/reimburse-me/login" method="POST">
-            <input id="username" type="text" name="username" placeholder="Enter your username...">
-            <br>
-            <input id="password" type="password" name="password" placeholder="Enter your password...">
-            <br>
-            <input id="post-req" class="button" type="submit" value="Sign In!">
-            <script src="js/login.js"></script>
-        </form>
-    </section>
+	<section id="main-section">
+		<header id="head-container">
+			<h1>Welcome to ReimburseMe!</h1>
+			<h1>Please Sign In</h1>
+		</header>
+		<!--this will be a POST method request-->
+		<form name="loginForm" onSubmit="sendLogin(event.preventDefault())">
+			<input id="username" type="text" name="username"
+				placeholder="Enter your username..."> <br> <input
+				id="password" type="password" name="password"
+				placeholder="Enter your password..."> <br> <input
+				id="post-req" class="button" type="submit" value="Sign In!">
+			<script src="js/login.js"></script>
+		</form>
+	</section>
+	<p id="displayer" class="hide">Loading...</p>
+	<div id="loader" class="hide"></div>
 
 </body>
 
