--- a/project-1/src/main/webapp/home.html
+++ b/project-1/src/main/webapp/home.html
@@ -18,7 +18,7 @@
     </header>
     <section id="option-container">
         <div id="option">
-            <i class="fas fa-file-invoice-dollar"></i> <a href="">Submit a
+            <i class="fas fa-file-invoice-dollar"></i> <a onclick="goSubmit()">Submit a
 				Reimbursement Request</a>
         </div>
         <div id="option">
