--- a/project-1/src/main/webapp/view-past-requests.html
+++ b/project-1/src/main/webapp/view-past-requests.html
@@ -11,35 +11,50 @@
 <script src="https://kit.fontawesome.com/b825c1b0e8.js"></script>
 </head>
 <body>
-	<h1>View Past Reimbursements</h1>
-	<div id="header"><span id="author-id" class="field"></span><span><i class="fas fa-filter"></i></span></div><br>
-	<table id="data-container">
-		<thead>
-			<tr>
-				<th>Reimb ID</th>
-				<th>Amount</th>
-				<th>Reason</th>
-				<th>Status</th>
-				<th>Type</th>
-				<th>Submitted On</th>
-				<th>Resolved On</th>
-				<th>Request Manager</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Cell 1</td>
-				<td>Cell 2</td>
-				<td>Cell 3</td>
-				<td>Cell 4</td>
-				<td>Cell 5</td>
-				<td>Cell 6</td>
-				<td>Cell 7</td>
-				<td>Cell 8</td>
-			</tr>
-		</tbody>
-	</table>
-	<button onclick="goBack()">Return to Home Page</button>
+	<span class="title">View Past Reimbursements<button onclick="goBack()">Return to Home Page</button></span>
+	<div id="header">
+		<span id="author-id" class="field"></span>
+		<div class="menu">
+			<i class="fas fa-filter menu-btn"></i>
+			<div id="menu-content">
+				<h3 class="menu-title">Filter By STATUS:</h3>
+				<ul class="menu-content-list">
+					<li>APPROVED</li>
+					<li>DENIED</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="container">
+		<table>
+			<thead>
+				<tr>
+					<th>Reimb ID</th>
+					<th>Amount</th>
+					<th>Description</th>
+					<th>Status</th>
+					<th>Type</th>
+					<th>Submitted On</th>
+					<th>Resolved On</th>
+					<th>Request Manager</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Cell 1</td>
+					<td>Cell 2</td>
+					<td>Cell 3</td>
+					<td>Cell 4</td>
+					<td>Cell 5</td>
+					<td>Cell 6</td>
+					<td>Cell 7</td>
+					<td>Cell 8</td>
+				</tr>
+			</tbody>
+		</table>
+	</div><br>
+	
 	<script src="js/view-past.js"></script>
 </body>
 </html>
