--- a/project-1/src/main/webapp/view-past-requests.html
+++ b/project-1/src/main/webapp/view-past-requests.html
@@ -40,16 +40,9 @@
 					<th>Request Manager</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody id="table-data">
 				<tr>
-					<td>Cell 1</td>
-					<td>Cell 2</td>
-					<td>Cell 3</td>
-					<td>Cell 4</td>
-					<td>Cell 5</td>
-					<td>Cell 6</td>
-					<td>Cell 7</td>
-					<td>Cell 8</td>
+					<td>N/A</td>
 				</tr>
 			</tbody>
 		</table>
