all employee functionalities now work

--- a/project-1/src/main/webapp/done.html
+++ b/project-1/src/main/webapp/done.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ReimburseMe! || Success</title>
+<title>ReimburseMe! || Done</title>
 <script src="https://kit.fontawesome.com/b825c1b0e8.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link
@@ -104,11 +104,11 @@ p, h1 {
 </body>
 <div id="container">
 	<i class="fas fa-clipboard-check"></i>
-	<h1 id="status-code">SUCCESS</h1>
+	<h1 id="status-code">DONE</h1>
 	<p id="message">text</p>
 	<p id="reason">more text</p>
 </div>
 <br>
 <button id="go-back-btn" onclick="goBack()">RETURN HOME</button>
-<script src="js/success-reimb.js"></script>
+<script src="js/success-user.js"></script>
 </html>
