--- a/project-1/src/main/webapp/adminstration.html
+++ b/project-1/src/main/webapp/adminstration.html
@@ -3,10 +3,68 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>ReimburseMe! || Adminstration Home Page</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link
+	href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<script src="https://kit.fontawesome.com/b825c1b0e8.js"></script>
+<link rel="shortcut icon" href="img/money-icon-2.png"
+	type="image/x-icon" />
 </head>
 <body>
-hello admin :)
-<button onclick="goBack()">Return to Home Page</button>
-<script src="js/admin-home.js"></script>
+	<header>
+		<h1>ADMINSTRATION</h1>
+		<p>Select an option from below.</p>
+	</header>
+
+	<div id="helpModal" class="modal">
+		<div class="modal-contents">
+			<div class="close">&times;</div>
+			<h2>How to Use ReimburseMe - Admin Guide</h2>
+			<div class="myHelp">
+				<strong>View All Reimbursements</strong>: Select this option to view
+				all reimbursements within the API database.<br> <strong>View
+					All Users</strong>: Select this option to view all users within the API
+				database.<br> <strong>Authorize Reimbursements</strong>: Select
+				this option to change an active reimbursement request from PENDING
+				to APPROVED or DENIED.<br> <strong>Remove Employee
+					Profile</strong>: Select this option to remove a employee from the API
+				database.<br> <br> For any questions or concerns while
+				using ReimburseMe, please contact our tech team at <a href="#">contact.helpdesk@gmail.com</a>.
+			</div>
+		</div>
+	</div>
+	<section id="option-container">
+		<div id="option">
+			<i class="fas fa-money-check-alt"></i> <a
+				onclick="goViewAllReimb()">View All Reimbursements</a>
+		</div>
+		<div id="option">
+			<i class="fas fa-users"></i> <a
+				onclick="goViewAllUsers()">View All Users</a>
+		</div>
+		<div id="option">
+			<i class="fas fa-gavel"></i> <a onclick="goAuthorize()">Authorize
+				Reimbursements</a>
+		</div>
+		<div id="option">
+			<i class="fas fa-user-slash"></i> <a onclick="goDeleteEmployee()">Remove
+				Employee Profile</a>
+		</div>
+	</section>
+	<br>
+
+	<footer>
+		<nav>
+			<ul>
+				<li><span id="welcome-message">Manager: <span id="user-name"></span> (UID: <span id="user-id"></span>)</span></li>
+				<li><a id="helpBtn">Need Help?</a></li>
+				<li><a onclick="goBack()">Return to Home Page</a></li>
+			</ul>
+		</nav>
+	</footer>
+	<script src="js/admin-home.js"></script>
+	<script src="js/help.js"></script>
 </body>
 </html>
