short of three manager stories, all employee stories complete

--- a/project-1/src/main/webapp/index.html
+++ b/project-1/src/main/webapp/index.html
@@ -28,6 +28,8 @@
 				id="post-req" class="button" type="submit" value="Sign In!">
 			<script src="js/login.js"></script>
 		</form>
+		
+		<a id="link" href="register.html">Sign Up For A User Account!</a>
 	</section>
 	<p id="displayer" class="hide">Loading...</p>
 	<div id="loader" class="hide"></div>
