--- a/project-1/src/main/webapp/adminstration.html
+++ b/project-1/src/main/webapp/adminstration.html
@@ -8,6 +8,7 @@
 	href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 	rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/admin-options.css">
 <script src="https://kit.fontawesome.com/b825c1b0e8.js"></script>
 <link rel="shortcut icon" href="img/money-icon-2.png"
 	type="image/x-icon" />
@@ -24,14 +25,20 @@
 			<h2>How to Use ReimburseMe - Admin Guide</h2>
 			<div class="myHelp">
 				<strong>View All Reimbursements</strong>: Select this option to view
-				all reimbursements within the API database.<br> <strong>View
-					All Users</strong>: Select this option to view all users within the API
-				database.<br> <strong>Authorize Reimbursements</strong>: Select
+				all reimbursements within the API database.<br> 
+				<strong>View All Users</strong>: Select this option to view all users within the API
+				database.<br> 
+				<strong>Authorize Reimbursements</strong>: Select
 				this option to change an active reimbursement request from PENDING
-				to APPROVED or DENIED.<br> <strong>Remove Employee
-					Profile</strong>: Select this option to remove a employee from the API
-				database.<br> <br> For any questions or concerns while
-				using ReimburseMe, please contact our tech team at <a href="#">contact.helpdesk@gmail.com</a>.
+				to APPROVED or DENIED.<br> 
+				<strong>View All Pending Reimbursements</strong>: Select this option to view
+				all reimbursements of PENDING status within the API database.<br>
+				<strong>View All Reimbursements From A Single Employee</strong>: Select this option to search
+				for all reimbursements based on the employee's ID number.<br>
+				<strong>Remove Employee Profile</strong>: Select this option to remove an employee from the API
+				database.<br><br>
+				For any questions or concerns while using ReimburseMe, please contact our tech team at 
+					<a href="#">contact.helpdesk@gmail.com</a>.
 			</div>
 		</div>
 	</div>
@@ -47,6 +54,12 @@
 		<div id="option">
 			<i class="fas fa-gavel"></i> <a onclick="goAuthorize()">Authorize
 				Reimbursements</a>
+		</div>
+		<div id="option">
+			<i class="fas fa-search"></i> <a onclick="goSingleSearch()">View All Reimbursements From A Single Employee</a>
+		</div>
+		<div id="option">
+			<i class="fas fa-map-pin"></i> <a onclick="goViewPendingReimb()">View All Pending Reimbursements</a>
 		</div>
 		<div id="option">
 			<i class="fas fa-user-slash"></i> <a onclick="goDeleteEmployee()">Remove
