--- a/project-1/src/main/webapp/view-past-requests.html
+++ b/project-1/src/main/webapp/view-past-requests.html
@@ -38,6 +38,7 @@
 					<th>Submitted On</th>
 					<th>Resolved On</th>
 					<th>Request Manager</th>
+					<th>Receipt</th>
 				</tr>
 			</thead>
 			<tbody id="table-data">
