fixed receipt upload and receipt functionalities

--- a/project-1/src/main/webapp/find-reimb-by-user-id.html
+++ b/project-1/src/main/webapp/find-reimb-by-user-id.html
@@ -85,6 +85,7 @@ label {
 					<th>Resolved On</th>
 					<th>Author ID</th>
 					<th>Resolver ID</th>
+					<th>Receipt</th>
 				</tr>
 			</thead>
 			<tbody id="table-data">
