--- a/project-1/src/main/webapp/view-all-pending-reimbursements.html
+++ b/project-1/src/main/webapp/view-all-pending-reimbursements.html
@@ -41,6 +41,7 @@
 					<th>Type</th>
 					<th>Submitted On</th>
 					<th>Author ID</th>
+					<th>Receipt</th>
 				</tr>
 			</thead>
 			<tbody id="table-data">
